--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <header>
+        <img class="backgroundImg" src="./img/backgroundImg.webp" loading="lazy">
         <div class="loader"></div>
 
         <nav id="navBar">
